# analisis-penal-juvenil

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
dashboard/: __init__.py  app.py  data.py  theme.py
dashboard/components/: filtros.py  kpis.py
dashboard/tabs/: calidad.py  delitos.py  gestion.py  temporal.py  tramites.py
data/backfill/: checksums.json
data/diccionarios/: diccionario_delitos_local.csv  diccionario_delitos_ministerio.csv  diccionario_resoluciones.csv  diccionario_tramites.csv  prefijos_ipp.csv
docs/: DOCUMENTACION.md
scripts/: descargar_nomenclador.py  refresh_checksums.py
src/: __init__.py  config.py  cruce_causas_resoluciones.py  diccionarios.py  indicadores.py  limpieza.py  logging_setup.py  normalizacion.py  normalizar_ipp.py  pipeline.py  resoluciones.py  schema.py  validacion_indicadores.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_cruce_causas_resoluciones.py  test_dashboard.py  test_indicadores.py  test_limpieza.py  test_normalizacion.py  test_normalizar_ipp.py  test_resoluciones.py  test_validacion_indicadores.py
